// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Favor completed 1`] = `
.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 div,
.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 2fr 10fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 div,
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="favor"
>
  <h4>
    small
  </h4>
  <h4>
    NAPD
  </h4>
  <div>
    Aditi's Union membership means she can call on other members of the Union for occasional help (see Union Member talent).
  </div>
</form>
`;

exports[`Storyshots Components/Favor default 1`] = `
.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 div,
.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 2fr 10fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 div,
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="favor"
>
  <h4>
    big
  </h4>
  <h4>
    Orgcrime
  </h4>
  <div>
    Aditi owes a big favor to Tián Shun, a mid-level boss in the 14K outfit. Tián helped Aditi establish her life in the Base De Cayambe and set up a fake ID for her that registers her as human. In return, he occasionally asks her to review the “books” from his part of the organization, and once had her patch up one of his wounded enforcers. He has made it clear that he expects more such aid going forward.
  </div>
</form>
`;

exports[`Storyshots Components/Favor editing 1`] = `
.c2 {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000;
}

.c3 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c3:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
}

.c0 > label {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > label > input {
  width: 100%;
}

.c0 textarea {
  width: 100%;
  height: 100%;
}

.c0 > h4 {
  margin: 0;
  text-transform: uppercase;
}

.c0 label[for='description'] {
  grid-column: 1/3;
  text-align: justify;
}

.c1 {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-gap: 12px;
  grid-column: 1/3;
}

.c1 svg {
  font-size: 20px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: 2fr 10fr 1fr;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 > label {
    grid-column: 1/2;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c0 label[for='description'] {
    grid-column: 2;
    grid-row: 1/3;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1800px) {
  .c1 {
    grid-template-columns: 1fr;
    grid-column: 3;
    grid-row: 1/3;
  }
}

<form
  class="c0"
  data-testid="favor"
>
  <label
    for="type"
  >
    <input
      name="type"
      value="small"
    />
  </label>
  <label
    for="faction"
  >
    <input
      name="faction"
      value=""
    />
  </label>
  <label
    for="description"
  >
    <textarea
      name="description"
      rows="4"
    />
  </label>
  <div
    class="c1 c2"
    data-testid="form-buttons"
  >
    <button
      class="c3"
      data-testid="cancel"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <button
      class="c3"
      data-testid="submit"
      type="submit"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </button>
  </div>
</form>
`;
